# lhcb-marketplace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  maintenance.json  marketplace.json  mcp-dependencies.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: check.yml  mcp-live.yml
plugins/cern-code/: .mcp.json  plugin.json
plugins/hep-research/: .mcp.json  plugin.json
plugins/lhcb/: plugin.json
schemas/: claude-marketplace.schema.json  claude-plugin.schema.json  codex-marketplace.schema.json  codex-plugin.schema.json  hardening-evaluations.schema.json  hardening-evidence.schema.json  maintenance.schema.json  marketplace.schema.json  mcp-config.schema.json  mcp-inventory.schema.json  plugin.schema.json  provenance.schema.json  release-readiness.schema.json  release.schema.json  skill-evaluations.schema.json  skill-metadata.schema.json
scripts/: _lib.py  build_adapters.py  build_catalog.py  build_mcp_configs.py  check_adapters.py  check_all.py  check_hardening.py  check_manifests.py  check_mcp_configs.py  check_mcp_releases.py  check_provenance.py  check_release.py  check_release_readiness.py  check_schemas.py  check_skills.py  evaluate_skills.py  rehearse_release.py  smoke_mcp.py
tests/: hardening-evaluations.json  skill-routing.json  test_execution_skills.py  test_hardening.py  test_phase4_skills.py  test_phase5_skills.py  test_planning_skills.py  test_release.py  test_release_readiness.py  test_repository_checks.py
(+43 files in other folders)
