[project]
name = "lhcb-agent-marketplace"
version = "0.0.0"
description = "Development tooling for the community LHCb Agent Marketplace"
requires-python = ">=3.11"
license = "MIT"

[dependency-groups]
dev = [
  "jsonschema[format]>=4.26.0,<5",
  "mcp>=1.28.1,<2",
  "pytest>=8,<10",
  "pyyaml>=6,<7",
  "ruff>=0.12,<1",
  "skills-ref>=0.1.1,<1",
  "uproot>=5.6,<6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [".uv-cache"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
